First test with stenoHID

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,9 @@
 [metadata]
-name = plover-treal
-version = 1.0.1
-description = Tréal support for Plover
+name = plover-stenohid
+version = 0.1.1
+description = Support for a generic HID steno protocol in plover
 long_description = file: README.rst
-author = Ted Morin
-author_email = morinted@gmail.com
+authors = Ted Morin
 license = GNU General Public License v2 or later (GPLv2+)
 url = https://github.com/morinted/plover_treal
 classifiers =
@@ -26,13 +25,14 @@ setup_requires =
 	setuptools-scm
 install_requires =
 	plover>=4.0.0.dev0
-	hidapi
 py_modules =
-  plover_treal
+  plover_qmk
+  find_dev
+  hiddev
 
 [options.entry_points]
 plover.machine =
-	Treal = plover_treal:Treal
+	QMK = plover_qmk:QMK
 
 [bdist_wheel]
 universal = 1
