--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
-name = plover-treal
-version = 1.0.1
-description = Tréal support for Plover
+name = plover-stenohid
+version = 0.1.0
+description = testing a steno HID protocol for plover + qmk
 long_description = file: README.rst
-author = Ted Morin
-author_email = morinted@gmail.com
+author = Antonius Frie
+author_email = antonius.frie@ruhr-uni-bochum.de
 license = GNU General Public License v2 or later (GPLv2+)
 url = https://github.com/morinted/plover_treal
 classifiers =
-	Development Status :: 5 - Production/Stable
+	Development Status :: 3 - Alpha
 	Environment :: Plugins
 	Intended Audience :: End Users/Desktop
 	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
@@ -28,11 +28,11 @@ install_requires =
 	plover>=4.0.0.dev0
 	hidapi
 py_modules =
-  plover_treal
+  plover_qmk
 
 [options.entry_points]
 plover.machine =
-	Treal = plover_treal:Treal
+	QMK = plover_qmk:QMK
 
 [bdist_wheel]
 universal = 1
