Re-organize package structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description = file: README.rst
 author = Antonius Frie
 author_email = antonius.frie@ruhr-uni-bochum.de
 license = GNU General Public License v2 or later (GPLv2+)
-url = https://github.com/morinted/plover_treal
+url = https://github.com/antoniusf/plover-stenohid-experiment
 classifiers =
 	Development Status :: 3 - Alpha
 	Environment :: Plugins
@@ -27,12 +27,12 @@ setup_requires =
 install_requires =
 	plover>=4.0.0.dev0
 	hidapi
-py_modules =
+packages =
   plover_qmk
 
 [options.entry_points]
 plover.machine =
-	QMK = plover_qmk:QMK
+	QMK = plover_qmk.hidapi_backend:QMK
 
 [bdist_wheel]
 universal = 1
