Update README, copyright info

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,8 @@ classifiers =
 	Programming Language :: Python :: 3.5
 keywords = plover plover_plugin
 
+# TODO: idk are the classifiers correct??
+
 [options]
 zip_safe = True
 setup_requires =
@@ -34,6 +36,7 @@ packages =
 plover.machine =
 	QMK = plover_qmk.hidapi_backend:QMK
 
+# TODO: also what about this thing?
 [bdist_wheel]
 universal = 1
 
