Re-organize package structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,9 +3,9 @@ name = plover-stenohid
 version = 0.1.1
 description = Support for a generic HID steno protocol in plover
 long_description = file: README.rst
-authors = Ted Morin
+authors = Antonius Frie
 license = GNU General Public License v2 or later (GPLv2+)
-url = https://github.com/morinted/plover_treal
+url = asdf
 classifiers =
 	Development Status :: 5 - Production/Stable
 	Environment :: Plugins
@@ -25,14 +25,12 @@ setup_requires =
 	setuptools-scm
 install_requires =
 	plover>=4.0.0.dev0
-py_modules =
+packages =
   plover_qmk
-  find_dev
-  hiddev
 
 [options.entry_points]
-plover.machine =
-	QMK = plover_qmk:QMK
+plover.linux.machine =
+	QMK = plover_qmk.linux_backend:QMK
 
 [bdist_wheel]
 universal = 1
