Add conditional dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = plover-stenohid
-version = 0.1.0
+version = 0.1.0.dev0
 description = testing a steno HID protocol for plover + qmk
 long_description = file: README.rst
 author = Antonius Frie
@@ -28,9 +28,8 @@ setup_requires =
 	setuptools-scm
 install_requires =
 	plover>=4.0.0.dev0
-	# TODO: platform-specificity for hidapi?
-	# also, add platform-specific dependency for pyudev
-	hidapi
+	hidapi; (platform_system == 'Windows' or platform_system == 'Darwin')
+	pyudev; platform_system == 'Linux'
 packages =
   plover_qmk
 
