--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = plover-stenohid
+name = plover-stenohid-test
 version = 0.1.0.dev0
 description = testing a steno HID protocol for plover + qmk
 long_description = file: README.rst
@@ -12,17 +12,16 @@ classifiers =
 	Environment :: Plugins
 	Intended Audience :: End Users/Desktop
 	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
-	Operating System :: OS Independent
-	Programming Language :: Python :: 2.7
+	Operating System :: POSIX :: Linux
+        Operating System :: Microsoft :: Windows
+        Operating System :: MacOS :: MacOS X
 	Programming Language :: Python :: 3
 	Programming Language :: Python :: 3.4
 	Programming Language :: Python :: 3.5
 keywords = plover plover_plugin
 
-# TODO: idk are the classifiers correct??
-
 [options]
-zip_safe = True
+python_requires = >=3.4
 setup_requires =
 	setuptools>=34.4.0
 	setuptools-scm
@@ -40,9 +39,5 @@ plover.windows.machine =
 	QMK = plover_qmk.hidapi_backend:QMK
 plover.mac.machine =
 	QMK = plover_qmk.hidapi_backend:QMK
-
-# TODO: also what about this thing?
-[bdist_wheel]
-universal = 1
 
 # vim: commentstring=#\ %s list
