Fix readme formatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = plover-stenohid-test
-version = 0.1.0.dev0
-description = testing a steno HID protocol for plover + qmk
+version = 0.1.0.dev1
+description = testing a steno HID protocol for plover and qmk
 long_description = file: README.rst
 author = Antonius Frie
 author_email = antonius.frie@ruhr-uni-bochum.de
